kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dltagg-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
  namespace: dltagg-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      containers:
        - name: fastapi-app
          image: ewr.vultrcr.com/dltagg/docuxtract-backend:latest
          ports:
            - containerPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-service
  namespace: dltagg-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-service
  template:
    metadata:
      labels:
        app: ollama-service
    spec:
      containers:
        - name: ollama
          image: ewr.vultrcr.com/dltagg/ollama:mistral  # Replace with the Ollama image
          ports:
            - containerPort: 11434
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "8Gi"
              cpu: "1000m"

# MVP To Do - setup a tesseract API
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: tesseract
#   namespace: docuxtract
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: tesseract
#   template:
#     metadata:
#       labels:
#         app: tesseract
#     spec:
#       containers:
#       - name: tesseract
#         image: jitesoft/tesseract-ocr
#         command: ["train-lang"]
#         args: ["por", "--best"]
#         ports:
#         - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: dltagg-ns
spec:
  selector:
    app: fastapi-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: dltagg-ns
spec:
  selector:
    app: ollama-service
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
  type: ClusterIP

# MVP To Do - setup a tesseract API
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: tesseract
#   namespace: docuxtract
# spec:
#   selector:
#     app: tesseract
#   ports:
#     - protocol: TCP
#       port: 5000
#       targetPort: 5000
#   type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: dltagg-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Ensures it uses NGINX Ingress
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.dltagg.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi-service
              port:
                number: 8000
  # tls:
  #   - hosts:
  #       - dltagg.com
  #     secretName: tls-secret  # For HTTPS (replace with your TLS cert)
